--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.6"
+    "@astrojs/alpinejs": "^0.4.9",
+    "@types/alpinejs": "^3.13.11",
+    "alpinejs": "^3.15.3",
+    "astro": "^5.16.6",
+    "sass": "^1.97.0"
   }
 }
