--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
   "exclude": ["dist"],
   "compilerOptions": {
     "paths": {
-      "@lib/*": ["./src/lib/*"],
+      "$lib/*": ["./src/lib/*"],
     }
   }
 }
